--- a/templates/serviceaccount.yaml
+++ b/templates/serviceaccount.yaml
@@ -2,9 +2,9 @@
 apiVersion: v1
 kind: ServiceAccount
 metadata:
-  name: {{ include "demodeck-helm-chart.serviceAccountName" . }}
+  name: {{ include "demodeck-single-version.serviceAccountName" . }}
   labels:
-    {{- include "demodeck-helm-chart.labels" . | nindent 4 }}
+    {{- include "demodeck-single-version.labels" . | nindent 4 }}
   {{- with .Values.serviceAccount.annotations }}
   annotations:
     {{- toYaml . | nindent 4 }}
