--- a/templates/auth-api.yaml
+++ b/templates/auth-api.yaml
@@ -20,7 +20,7 @@ spec:
         {{- toYaml .Values.podSecurityContext | nindent 8 }}
       containers:
       - name: {{ .Values.authApi.name }}
-        image: "{{ .Values.global.registry }}/{{ .Values.authApi.image }}:{{ .Values.authApi.tag }}"
+        image: "{{- if .Values.global.registry }}{{ .Values.global.registry }}/{{- end }}{{ .Values.authApi.image }}:{{ .Values.authApi.tag }}"
         imagePullPolicy: {{ .Values.global.imagePullPolicy }}
         ports:
         - containerPort: {{ .Values.authApi.port }}
