code improvements for single deployment

--- a/templates/tenant-uis/acme-ui.yaml
+++ b/templates/tenant-uis/acme-ui.yaml
@@ -1,3 +1,8 @@
+# ACME Tenant UI Deployment
+# Note: Environment variables are baked into the Docker image at build time using build args.
+# The build configuration is specified in values.yaml under tenantUis.acme.buildConfig
+# To build tenant-specific images, use:
+# docker build --build-arg VUE_APP_TENANT_NAME=acme --build-arg VUE_APP_TITLE="ACME Corporation Portal" ... -t demodeck-tenant-ui:acme-v1.0.0
 apiVersion: apps/v1
 kind: Deployment
 metadata:
@@ -26,11 +31,6 @@ spec:
         ports:
         - containerPort: {{ .Values.tenantUis.acme.port }}
           name: http
-        env:
-        {{- range $key, $value := .Values.tenantUis.acme.env }}
-        - name: {{ $key }}
-          value: {{ $value | quote }}
-        {{- end }}
         livenessProbe:
           httpGet:
             path: /
