--- a/values.yaml
+++ b/values.yaml
@@ -33,9 +33,9 @@ tenantApi:
   env:
     ASPNETCORE_ENVIRONMENT: "Development"
     ASPNETCORE_URLS: "http://+:5121"
-    Cors__AllowedOrigins__0: "https://acme.demodeck.xyz" #Wildcard domains: http://*.demodeck.xyz isn't valid - wildcards only work with HTTPS in .NET CORS
-    Cors__AllowedOrigins__1: "https://tenantregistry.demodeck.xyz"
-    Cors__AllowedOrigins__2: "https://*.demodeck.xyz"
+    Cors__AllowedOrigins__0: "http://acme.demodeck.xyz"
+    Cors__AllowedOrigins__1: "http://tenantregistry.demodeck.xyz"
+    Cors__AllowedOrigins__2: "http://*.demodeck.xyz"
     Cors__AllowCredentials: "true"
     Cors__AllowedHeaders__0: "*"
     Cors__AllowedMethods__0: "*"
@@ -68,9 +68,9 @@ authApi:
   env:
     ASPNETCORE_ENVIRONMENT: "Development"
     ASPNETCORE_URLS: "http://+:5001"
-    TenantUrl: "https://tenant-api.demodeck.xyz/api/tenant/"    
-    Cors__AllowedOrigins__0: "https://acme.demodeck.xyz"
-    Cors__AllowedOrigins__1: "https://*.demodeck.xyz"
+    TenantUrl: "http://tenant-api.demodeck.xyz/api/tenant/"    
+    Cors__AllowedOrigins__0: "http://acme.demodeck.xyz"
+    Cors__AllowedOrigins__1: "http://*.demodeck.xyz"
     Cors__AllowCredentials: "true"
     Cors__AllowedHeaders__0: "*"
     Cors__AllowedMethods__0: "*"
@@ -103,8 +103,8 @@ productApi:
   env:
     ASPNETCORE_ENVIRONMENT: "Development"
     ASPNETCORE_URLS: "http://+:5002"    
-    Cors__AllowedOrigins__0: "https://acme.demodeck.xyz"
-    Cors__AllowedOrigins__1: "https://*.demodeck.xyz"
+    Cors__AllowedOrigins__0: "http://acme.demodeck.xyz"
+    Cors__AllowedOrigins__1: "http://*.demodeck.xyz"
     Cors__AllowCredentials: "true"
     Cors__AllowedHeaders__0: "*"
     Cors__AllowedMethods__0: "*"
@@ -175,11 +175,11 @@ ingress:
   className: "nginx"
   annotations:
     kubernetes.io/ingress.class: nginx
-    nginx.ingress.kubernetes.io/rewrite-target: /
-    nginx.ingress.kubernetes.io/ssl-redirect: "true"
+    # nginx.ingress.kubernetes.io/rewrite-target: /
+    nginx.ingress.kubernetes.io/ssl-redirect: "false"
     cert-manager.io/cluster-issuer: "letsencrypt-prod"
   tls:
-    enabled: true
+    enabled: false
     secretName: demodeck-tls
 
 # Horizontal Pod Autoscaler
