--- a/templates/services/product-api.yaml
+++ b/templates/services/product-api.yaml
@@ -34,6 +34,13 @@ spec:
           value: "http://+:{{ .Values.services.productAPI.port }}"
         - name: ASPNETCORE_ENVIRONMENT
           value: "Production"
+        # OpenTelemetry tracing configuration
+        - name: OTEL_SERVICE_NAME
+          value: "product-api"
+        - name: OTEL_EXPORTER_OTLP_ENDPOINT
+          value: "http://tempo.{{ .Values.namespaces.observability }}.svc.cluster.local:4317"
+        - name: OpenTelemetry__OtlpEndpoint
+          value: "http://tempo.{{ .Values.namespaces.observability }}.svc.cluster.local:4317"
         resources:
           {{- toYaml .Values.services.productAPI.resources | nindent 10 }}
         livenessProbe:
