--- a/templates/services/tenant-api.yaml
+++ b/templates/services/tenant-api.yaml
@@ -34,6 +34,13 @@ spec:
           value: "http://+:{{ .Values.services.tenantAPI.port }}"
         - name: ASPNETCORE_ENVIRONMENT
           value: "Production"
+        # OpenTelemetry tracing configuration
+        - name: OTEL_SERVICE_NAME
+          value: "tenant-api"
+        - name: OTEL_EXPORTER_OTLP_ENDPOINT
+          value: "http://tempo.{{ .Values.namespaces.observability }}.svc.cluster.local:4317"
+        - name: OpenTelemetry__OtlpEndpoint
+          value: "http://tempo.{{ .Values.namespaces.observability }}.svc.cluster.local:4317"
         resources:
           {{- toYaml .Values.services.tenantAPI.resources | nindent 10 }}
         livenessProbe:
