--- a/templates/services/auth-api.yaml
+++ b/templates/services/auth-api.yaml
@@ -36,10 +36,19 @@ spec:
           value: "Production"
         - name: TenantUrl
           value: "http://{{ .Values.services.tenantAPI.name }}-service.{{ .Values.namespaces.services }}.svc.cluster.local/api/tenant"
-        - name: Cors__AllowedOrigins__0
-          value: "http://{{ .Values.services.authAPI.ingress.host }}.{{ .Values.global.domain }}"
-        - name: Cors__AllowedOrigins__1
-          value: "http://*.{{ .Values.global.domain }}"
+        # CORS - Allow tenant UI origins
+        {{- $corsIndex := 0 }}
+        {{- range .Values.tenants.list }}
+        {{- if .enabled }}
+        - name: Cors__AllowedOrigins__{{ $corsIndex }}
+          value: "http://{{ .subdomain }}.{{ $.Values.global.domain }}"
+        {{- $corsIndex = add $corsIndex 1 }}
+        {{- end }}
+        {{- end }}
+        - name: Cors__AllowedOrigins__{{ $corsIndex }}
+          value: "http://localhost:8080"
+        - name: Cors__AllowCredentials
+          value: "true"
         # OpenTelemetry tracing configuration
         - name: OTEL_SERVICE_NAME
           value: "auth-api"
@@ -94,8 +103,9 @@ metadata:
     {{- include "demodeck.labels" . | nindent 4 }}
     app: {{ .Values.services.authAPI.name }}
   annotations:
-    kubernetes.io/ingress.class: {{ .Values.global.ingress.className }}
     appgw.ingress.kubernetes.io/use-private-ip: {{ .Values.global.ingress.usePrivateIP | quote }}
+    appgw.ingress.kubernetes.io/health-probe-path: {{ .Values.services.authAPI.healthPath | quote }}
+    appgw.ingress.kubernetes.io/backend-protocol: "http"
     {{- if .Values.global.ingress.enableSSL }}
     appgw.ingress.kubernetes.io/ssl-redirect: "true"
     {{- end }}
