--- a/templates/services/legacy-api.yaml
+++ b/templates/services/legacy-api.yaml
@@ -99,8 +99,9 @@ metadata:
     app: {{ .Values.services.legacyAPI.name }}
     app.kubernetes.io/platform: windows
   annotations:
-    kubernetes.io/ingress.class: {{ .Values.global.ingress.className }}
     appgw.ingress.kubernetes.io/use-private-ip: {{ .Values.global.ingress.usePrivateIP | quote }}
+    appgw.ingress.kubernetes.io/health-probe-path: {{ .Values.services.legacyAPI.healthPath | quote }}
+    appgw.ingress.kubernetes.io/backend-protocol: "http"
     {{- if .Values.global.ingress.enableSSL }}
     appgw.ingress.kubernetes.io/ssl-redirect: "true"
     {{- end }}
