--- a/templates/services/tenant-api.yaml
+++ b/templates/services/tenant-api.yaml
@@ -88,8 +88,9 @@ metadata:
     {{- include "demodeck.labels" . | nindent 4 }}
     app: {{ .Values.services.tenantAPI.name }}
   annotations:
-    kubernetes.io/ingress.class: {{ .Values.global.ingress.className }}
     appgw.ingress.kubernetes.io/use-private-ip: {{ .Values.global.ingress.usePrivateIP | quote }}
+    appgw.ingress.kubernetes.io/health-probe-path: {{ .Values.services.tenantAPI.healthPath | quote }}
+    appgw.ingress.kubernetes.io/backend-protocol: "http"
     {{- if .Values.global.ingress.enableSSL }}
     appgw.ingress.kubernetes.io/ssl-redirect: "true"
     {{- end }}
