--- a/templates/tenant-ui.yaml
+++ b/templates/tenant-ui.yaml
@@ -109,8 +109,9 @@ metadata:
     app: {{ .name }}-ui
     tenant: {{ .name }}
   annotations:
-    kubernetes.io/ingress.class: {{ $.Values.global.ingress.className }}
     appgw.ingress.kubernetes.io/use-private-ip: {{ $.Values.global.ingress.usePrivateIP | quote }}
+    appgw.ingress.kubernetes.io/health-probe-path: {{ $.Values.tenants.common.healthPath | quote }}
+    appgw.ingress.kubernetes.io/backend-protocol: "http"
     {{- if $.Values.global.ingress.enableSSL }}
     appgw.ingress.kubernetes.io/ssl-redirect: "true"
     appgw.ingress.kubernetes.io/appgw-ssl-certificate: "wildcard-{{ $.Values.global.domain | replace "." "-" }}-cert"
