--- a/values-demo.yaml
+++ b/values-demo.yaml
@@ -6,7 +6,7 @@ global:
   domain: k8s.demodeck.xyz
   registry: demodeckacr.azurecr.io
   ingress:
-    className: azure/application-gateway
+    className: azure-application-gateway
     usePrivateIP: "false"
     enableSSL: false
 
@@ -15,7 +15,7 @@ services:
   tenantAPI:
     enabled: true
     replicas: 2
-    image: demodeck-tenant-api:release-2.0
+    image: demodeck-tenant-api:v1.0.2-observability
     ingress:
       enabled: true
       host: tenant-api  # tenant-api.k8s.demodeck.xyz
@@ -23,7 +23,7 @@ services:
   authAPI:
     enabled: true
     replicas: 2
-    image: demodeck-auth-api:release-2.0
+    image: demodeck-auth-api:v1.0.2-observability
     ingress:
       enabled: true
       host: auth-api  # auth-api.k8s.demodeck.xyz
@@ -31,7 +31,7 @@ services:
   productAPI:
     enabled: true
     replicas: 2
-    image: demodeck-product-api:release-2.0
+    image: demodeck-product-api:v1.0.2-observability
     ingress:
       enabled: true
       host: product-api  # product-api.k8s.demodeck.xyz
@@ -39,7 +39,7 @@ services:
   legacyAPI:
     enabled: true
     replicas: 1
-    image: demodeck-legacy-api:v1.0.1
+    image: demodeck-legacy-api:v1.0.2
     ingress:
       enabled: true
       host: legacy-api  # legacy-api.k8s.demodeck.xyz
@@ -51,7 +51,7 @@ tenants:
     - name: acme
       subdomain: acme
       enabled: true
-      image: demodeck-tenant-ui:observability-release
+      image: demodeck-tenant-ui:v1.0.2-observability
       replicas: 2
       apiVersion: release-2.0
 
